--- a/bugs/Dima.Web/Pages/Identity/Register.razor
+++ b/bugs/Dima.Web/Pages/Identity/Register.razor
@@ -30,8 +30,9 @@
                     Label="Senha"
                     HelperText="Campo obrigatório"
                     InputType="InputType.Password"
+                    Immediate="true"
                     For="@(() => InputModel.Password)"
-                    @bind-Value="InputModel.Password"/>
+                    @bind-Value="InputModel.Password" />
 
                 <div class="d-flex mt-8">
                     @if (IsBusy)
